--- a/pages/admin/add-product.html
+++ b/pages/admin/add-product.html
@@ -1,4 +1,4 @@
-<p>Home Page</p>
+<p>Add Product</p>
 <p>{{products}}</p>
 <p>{{testurl}}</p>
 <custom-footer authorname='Jeetan' linkurl='https://www.linkedin.com/in/jeetan-madaan-37aaa113/'></custom-footer>
