--- a/pages/directives/custom-header.html
+++ b/pages/directives/custom-header.html
@@ -1,8 +1,8 @@
-<header>
-    <nav>
-        <ul>
-            <li><a href="/">Link1</a></li>
-            <li><a href="/admin/add-product">Add Product</a></li>
+<header class="main-header">
+    <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+            <li class="main-header__item"><a [ngClass]="url === '/' ? 'active' : ''" href="/">Link1</a></li>
+            <li class="main-header__item"><a [ngClass]="url === '/admin/add-product' ? 'active' : ''" href="#!/admin/add-product">Add Product</a></li>
         </ul>
     </nav>
 </header>
