--- a/pages/admin/add-book.html
+++ b/pages/admin/add-book.html
@@ -1,4 +1,4 @@
-<p>Add Product</p>
-<p>{{products}}</p>
-<p>{{testurl}}</p>
+<p>Add Book</p>
+<p>{{books}}</p>
+<p>{{url}}</p>
 <custom-footer authorname='Jeetan' linkurl='https://www.linkedin.com/in/jeetan-madaan-37aaa113/'></custom-footer>
